# 3D-Mesh-Decimation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  MeshDecimation.1.cpp  MeshDecimation.2.cpp  MeshDecimation.cpp  MyGlCanvas.cpp  MyGlCanvas_a2.cpp  NanoguiMeshApp.cpp  README.md  StandardShading.fragmentshader  StandardShading.vertexshader  cmake_install.cmake  main.cpp  mcaq  obj_view  obj_view.cpp  obj_view_olf.cpp
lib/embed-resource/: Makefile  cmake_install.cmake  embed-resource
lib/nanogui/: Makefile  bin2c  cmake_install.cmake  example1  example2  example3  example4  example_icons
lib/nanogui/ext_build/glfw/: Makefile  cmake_install.cmake
lib/nanogui/ext_build/glfw/src/: Makefile  cmake_install.cmake  glfw3.pc  glfw_config.h
lib/nanogui/src/: example1.cpp
shader/: frag.glsl.c  vert.glsl.c
src/: MyGlCanvas.h  MyGlCanvas_a2.h  NanoguiMeshApp.h
